# tut

./: 1.qrc  README.md  dialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opa.qml  screen.cpp  screen.h  square.h  tut.pro  tut.pro.user.2601993
linux/linux_tut/module/host/: link.txt
linux/linux_tut/module/host/buzz/buzz/app/: CMakeLists.txt  app.cpp  buzz_test.cpp  instr.txt  test.c  toolchain-arm-linux-gnueabi.cmake
linux/linux_tut/module/host/buzz/buzz/app/build_arm/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
linux/linux_tut/module/host/char_dev/: Makefile  char_dev.c
linux/linux_tut/module/host/gpio/: Makefile
linux/linux_tut/module/host/gpio_in/gpio_work/app/: CMakeLists.txt  butt_check.c
linux/linux_tut/module/host/gpio_out/: gpio.c
linux/linux_tut/module/host/hi/: Makefile
linux/linux_tut/python/fft/: sin_func.py  twosin.py
linux/linux_tut/python/tcp_udp/: cin.py  pytcp.py  tcpclient.py  tcpserver.py
linux/linux_tut/script_wo_sudo_unsafe/: start  start.c
linux/linux_tut/serialization/: CMakeLists.txt
linux/linux_tut/serialization/inc/: image.h
linux/linux_tut/serialization/src/: image.cpp  image1.cpp  main.cpp
linux/linux_tut/tcp/serverpi/: .ccls
linux/linux_tut/tcp/serverpi/inc/: main.h  tcp.h
linux/linux_tut/tcp/serverpi/src/: main.cpp  tcp.cpp
linux/linux_tut/thread/src/: main.cpp
linux/linux_tut/tut_cpp/inc/: constexpr.h  meta.h  my_string.h  sfinae.h
linux/linux_tut/tut_cpp/src/: main.cpp
linux/linux_tut/tut_lin/daemon/: Makefile
linux/linux_tut/tut_lin/daemon/read_daemon/: Makefile
linux/linux_tut/tut_lin/daemon/src/: daemon.c
linux/linux_tut/tut_lin/daemon_server/: Makefile  server
linux/linux_tut/tut_lin/fifo/src/: fifo.c
linux/linux_tut/tut_lin/file/: Makefile
linux/linux_tut/tut_lin/file/src/: file.c
linux/linux_tut/tut_lin/fork_exec/: .ccls
linux/linux_tut/tut_lin/fork_exec/inc/: fexec.h
linux/linux_tut/tut_lin/fork_exec/src/: fexec.c
linux/linux_tut/tut_lin/forks/fork_exec/: Makefile
linux/linux_tut/tut_lin/forks/wait/: Makefile
linux/linux_tut/tut_lin/free/: Makefile  process
linux/linux_tut/tut_lin/free/inc/: free.h
linux/linux_tut/tut_lin/free/src/: free.c
linux/linux_tut/tut_lin/gtest/cmake/: CMakeLists.txt  build.sh
linux/linux_tut/tut_lin/ipc/fifo/: Makefile
linux/linux_tut/tut_lin/ipc/pipe/: Makefile
linux/linux_tut/tut_lin/ipc/sem/: Makefile
linux/linux_tut/tut_lin/ipc/shamem/: Makefile
linux/linux_tut/tut_lin/ipc/shmmap/: Makefile
linux/linux_tut/tut_lin/ipc/system/: callgrind.out.27076  valgrind_instr.txt
linux/linux_tut/tut_lin/multiplexing_fd/epoll_client/: Makefile
linux/linux_tut/tut_lin/multiplexing_fd/epoll_my/: Makefile
linux/linux_tut/tut_lin/multiplexing_fd/epoll_nonblock/: .ccls
linux/linux_tut/tut_lin/recursive_make/: .ccls  Makefile
linux/linux_tut/tut_lin/sem/: Makefile
linux/linux_tut/tut_lin/sig/: .ccls  Makefile
linux/linux_tut/tut_lin/system/: Makefile
linux/linux_tut/tut_lin/thread_cv/: Makefile
linux/linux_tut/tut_lin/thread_tcp/: Makefile
linux/linux_tut/tutgit/: build.sh  git_intructions.md
linux/linux_tut/tutgit/inc/: print.h  sum.h
linux/linux_tut/tutgit/src/: main.cpp
linux/tutorials/: index.html  sysinfo.sh
linux/tutorials/console_menu/: .ccls  build.sh
linux/tutorials/console_menu/ForBuildroot/: CMakeLists.txt
linux/tutorials/console_menu/inc/: fileops.h
linux/tutorials/console_menu/scripts/: 01  1  2  3  4  5  6  aaa
linux/tutorials/console_menu/src/: fileops.cpp  main.cpp
linux/tutorials/cpp/async_server/: .ccls  Makefile  README.md  head_html.http  server.key  server.pem
linux/tutorials/cpp/concurrency/: CMakeLists.txt  Makefile
linux/tutorials/cpp/concurrency/build_cmake/: build.sh
linux/tutorials/cpp/concurrency/inc/: threadpool.h
linux/tutorials/cpp/concurrency/src/: main.cpp
linux/tutorials/cpp/future/: Makefile
linux/tutorials/cpp/grasshopper/: Makefile
linux/tutorials/cpp/leet/: link.txt
linux/tutorials/cpp/rsa/: Makefile  mykey.pem  mykey.pub
linux/tutorials/cpp/server/: Makefile  certificate.txt  head_css.http  head_icon.http  head_javascript.http  index.html  style.css
linux/tutorials/cpp/tut_cpp/: .gdbinit  CMakeLists.txt
linux/tutorials/cpp/tut_cpp/inc/: allocate.h  concepts.h  cpp17.h  init_list.h  leetcode.h  move.h  rvalue.h  smart.h  vect.h
linux/tutorials/cpp/tut_cpp/src/: main.cpp
linux/tutorials/cpp/tutlsp/: .vimspector.json  Makefile  gdb_script
linux/tutorials/cpp/wxWidgetsModbusLib/: CMakeLists.txt
linux/tutorials/gtest/allocator/: test
linux/tutorials/gtest/calc/: CMakeLists.txt  link.html
linux/tutorials/gtest/cpp_tut/: CMakeLists.txt
linux/tutorials/gtest/cpp_tut/inc/: arr.h  forward.h  move.h  o.h  obs.h  print.h  ref.h  sfinae.h  stack.h  static_observer.h  test_observer.h  test_stack.h
linux/tutorials/gtest/cpp_tut/src/: main.cpp  o.cpp  obs.cpp  static_observer.cpp
linux/tutorials/gtest/queue_static/: CMakeLists.txt
linux/tutorials/gtest/stackalloc/: .ccls  CMakeLists.txt
linux/tutorials/instr/: .t113s4_uboot.txt.kate-swp  dtc_instruction.txt  fit.txt  instr.txt  kernel.txt  orangepi_zero2.txt  t113s4_uboot.txt  uboot_hush_scripts.txt  uboot_spi.txt
linux/tutorials/instr/buildroot/: useful_commands.txt
linux/tutorials/instr/debug/: perf.txt  zynq_uboot_gdb.txt
linux/tutorials/instr/net/: links.txt  tftp.txt
linux/tutorials/instr/qt/: qt_configure
linux/tutorials/instr/scripts/: checksum.txt  loops.txt
linux/tutorials/instr/toolchain/: .ccls
linux/tutorials/instr/zynq/: drivers.txt  uboot_env_spi_flash_zynq.txt  uboot_instr.txt  vitis_fsbl_dts_boot.txt  zynq_spi_lcd.txt
linux/tutorials/instr/zynq/buildroot_template/apps/package/app2/: CMakeLists.txt  app2.mk
linux/tutorials/instr/zynq/buildroot_template/apps/package/app2/src/: main.cpp
linux/tutorials/modules/usb_synth/: .ccls  Makefile  usb_synth.c
linux/tutorials/timer_console/: show.sh
linux/tutorials/xilinx/zynq/: instructions_links.txt
remote_control_linux_qt/: .clang-format  1.qrc  dialog.ui  main.cpp  screen.h
(+402 files in other folders)
